//
// Copyright 2023 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;
option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";

import "controlplane/v1/response_messages.proto";

service ContextService {
  // Get information about the current logged in context
	rpc Current (ContextServiceCurrentRequest) returns (ContextServiceCurrentResponse);
}

message ContextServiceCurrentRequest {}

message ContextServiceCurrentResponse {
  Result result = 1;
  
  message Result {
    User current_user = 1;
    OrgItem current_org = 2;
    CASBackendItem current_cas_backend = 3;
  }
}
